--- a/Models/-SVC/2024.06.09_SPA-SVC.md
+++ b/Models/-SVC/2024.06.09_SPA-SVC.md
@@ -96,3 +96,132 @@ This can alleviate the problem of voiceless regions caused by large pitch spans.
 The structure of this paper will be arranged as follows: Section [sec:method](#sec:method) will present the methodology and Section [sec:experiments](#sec:experiments) will describe the experimental setups and showcase the experimental results.
 
 And Section [sec:conclusions](#sec:conclusions) will conclude the paper.
+
+## 2·Method
+
+\label{sec:method}
+
+This section will provide a detailed explanation of our training and inference architecture in SPA-SVC, as well as the modules utilized within the model.
+
+As illustrated in Figure [fig:model](#fig:model)(a), we depict the architecture diagram for model training, while Figure [fig:model](#fig:model)(b) showcases the architecture diagram for model inference.
+\vspace{-0.2cm}
+
+### SPA-SVC Architecture
+
+In line with SVC models based on self-supervised diffusion [^Liu2021Diffsvc], [^Lu2024CoMoSVC] or VITS [^Zhou2023VITS-Based], [^Peng2023Singing], the training process of SPA-SVC begins with the extraction of self-supervised learning features (SSL), volume features (Vol), fundamental frequency (F0), and, to distinguish between different speakers, a speaker ID determined based on the current speaker.
+
+It is noteworthy that, following the extraction of fundamental frequency, we apply a pitch shifting transformation (for clarity, we denote features from the original audio as "o'' and highlight them in red, while features from pitch-shifted audio are denoted as "s'' and highlighted in blue).
+
+Differing from minor-range pitch enhancement in other models [^Guo2022Singaug], we set the number of the semitones in pitch shifting to a random integer within the range of 6 to 18, aiming to obtain a pitch-shifted singing voice with added hoarse voice during training.
+
+The formula for pitch augmentation is as follows:
+
+![](2.png)
+
+<a id="fig:model">The training and inference architecture of SPA-SVC.</a>
+
+\vspace{-0.1cm}
+
+$$
+
+F0_{s}= F0_{o} \times 2^{\left(\frac{key}{12}\right)},
+\label{eq:1}
+$$
+
+where, $F0_s$ denotes shifted pitch, $F0_o$ denotes orginal pitch and $key$ denotes the number of semitones in pitch shifting.
+
+Afterward, $F0_s$ is combined with other original audio features and input into the DDSP model through an embedding layer.
+
+This process results in the first reconstruction, yielding a pitch-shifted singing voice $wav_s$ with added breathiness.
+
+Subsequently, the self-supervised learning features $SSL_s$ are extracted from $wav_s$, which, along with other original audio features, are jointly input into the same DDSP model for a second time.
+
+This cycle reconstruction produces a singing voice $wav_c$ with the original pitch restored.
+
+Consequently, by computing the loss between the mel-spectrogram of the cycle reconstructed audio and that of the original audio, we optimize the DDSP model to generate high-pitched singing voices less likely to contain hoarseness.
+
+To investigate methods for enhancing the DDSP model's focus on finer details of singing voice and reducing the occurrence of hoarse sound, we introduce SSIM loss as cycle-consistency loss $\mathcal{L}_{cyc}$.
+
+The formula for SSIM loss is provided below:
+
+$$
+\mathcal{L}_{cyc} = 1- \text{SSIM}(x, \hat{x}),\label{eq:2}
+$$
+
+$$
+\text{SSIM}(x, \hat{x}) = \frac{({2\mu_{x} \mu_{\hat{x}} + c_1})({2\sigma_{x\hat{x}} + c_2})}{({\mu_{x}^2 + \mu_{\hat{x}}^2 + c_1})({\sigma_{x}\sigma_{\hat{x}} + c_2})},\label{eq:3}
+$$
+
+where $x$ denotes mel-spectrogram of the original audio and $\hat{x}$ denotes mel-spectrogram of the cycle reconstructed audio from DDSP model. $\mu$ denotes mean value, $\sigma_{x\hat{x}}$ denotes covariance of $x$ and $\hat{x}$, $\sigma_{x}^2$ and $\sigma_{\hat{x}}^2$ denote the variance of $x$ and $\hat{x}$ respectively and $c_1$ and $c_2$ are two variables used to stabilize the division with a weak denominator.
+
+Then, we utilize the output of the cycle reconstructed hidden layer features $hidden_c$ from DDSP as the input for the diffusion model.
+
+Subsequently, we obtain the final reconstruction of the original audio's mel-spectrogram $mel_c$, and compute the diffusion loss to train the diffusion model.
+
+The simplified loss computation formula is as follows:
+
+$$
+\mathcal{L}_{diff} = \mathbb{E}_{t,x_0,\epsilon} \left[ ||\epsilon - \epsilon_\theta\left( \sqrt{\bar{\alpha}_t}x_0 + \sqrt{1 - \bar{\alpha}_t}\epsilon, t \right)||^2 \right],
+\label{eq:4}
+$$
+
+where $\theta$ denotes the model parameters, $\epsilon$ denotes random noise, $x_0$ denotes the original data, $\bar{\alpha}_t$ is a parameter in the model, and $t$ is the time step.
+
+The expectation expression encapsulates the expectation value over all possible $t$, $x_0$, and $\epsilon$.
+
+Thus, the total loss of SPA-SVC is as follows:
+
+$$
+\mathcal{L}_{total}=\mathcal{L}_{cyc}+\mathcal{L}_{diff}
+\label{eq:5}
+$$
+
+As shown in Figure 2(b), the inference strategy of the model follows the approach of DDSP-SVC-Diff [^Yxlllc2023Real-Time].
+
+We treat the DDSP model and the diffusion model collectively as the acoustic model.
+
+After extracting the $SSL_o$, $Vol_o$, and $F0_o$ features from the original audio and specifying the speaker ID, pitch-shifted $F0_s$ can be calculated by specifying the number of semitones for the pitch shifting.
+
+These features are then fed sequentially into the DDSP model and the diffusion model after passing through an embedding layer and being added together.
+
+The resulting $mel_s$ is then combined with $F0_s$ and fed into the pre-trained vocoder NSF-HiFiGAN [^OpenVPI2022DiffSinger] to obtain the desired timbre of the audio, thereby completing the SVC tasks.
+
+### Modules
+
+#### Feature Extraction Model
+
+\vspace{-0.1cm}
+
+The Contentvec [^Qian2022Contentvec] is employed for extracting SSL features.
+
+This is an improved version of HuBERT [^Hsu2021Hubert] designed to better eliminate timbre information from speech encodings.
+
+Additionally, we utilize the pretrained RMVPE [^Wei2023Rmvpe] model in this study to extract the pitch, for its effectiveness and robustness.
+
+#### DDSP Model
+
+\vspace{-0.1cm}
+
+To enable manipulation of energy, pitch, and timbre in vocal synthesis, we utilize the DDSP [^Engel2020Ddsp] model as our primary framework.
+
+DDSP integrates neural network methods with suitable feature representations, facilitating efficient learning and control of different sound aspects via controllable parameters.
+
+Its separation-based approach breaks down audio signals into key components like amplitude, frequency, and envelope, enabling accurate manipulation of energy, pitch, and timbre.
+
+#### Diffusion Model
+
+Moreover, to improve the quality of vocal synthesis, the diffusion [^Ho2020Denoising] model is utilized to process the output of DDSP.
+
+Integrating the diffusion model with DDSP enriches the description of sound characteristics by filling in any gaps, thereby boosting the performance of SVC.
+
+The strong performance of diffusion model in SVC tasks has been demonstrated in DiffSVC [^Liu2021Diffsvc] and CoMoSVC [^Lu2024CoMoSVC].
+
+#### NSF-HiFiGAN
+
+\vspace{-0.1cm}
+
+Furthermore, to achieve high-quality singing voices, NSF-HiFiGAN [^OpenVPI2022DiffSinger] is used as the vocoder in this study.
+
+Compared to HiFi-GAN [^Kong2020Hifi-Gan], incorporating the NSF [^Wang2019Neural] module for modeling and processing audio signals allows for better capture and reconstruction of dynamic features and subtle structures within the audio.
+
+This enhances the quality and realism of singing voice synthesis.
