--- a/Models/-SVC/2024.06.09_SPA-SVC.md
+++ b/Models/-SVC/2024.06.09_SPA-SVC.md
@@ -369,3 +369,17 @@ Comparing SPA-SVC with other models shows a clearer harmonic texture and less no
 ![](3.png)
 
 <a id="fig:visualize">Comparison of spectrograms.</a>
+
+## 4·Conclusions
+
+\label{sec:conclusions}
+
+In this study, we propose a novel self-supervised pitch augmentation method for singer voice conversion called SPA-SVC.
+
+By incorporating a cycle pitch shifting training strategy, our approach enables SVC models to overcome singer vocal range limitations, particularly in scenarios where the pitch of the source domain vocals significantly exceeds that of the target domain singer.
+
+Additionally, we introduced SSIM loss into SVC, allowing the SPA-SVC model to effectively learn vocal details and produce higher-quality vocals.
+
+Our experimental results demonstrate that, without requiring additional training data or increasing model parameters, our proposed SPA-SVC achieves optimal performance across most metrics.
+
+These results indicate that our method not only enhances the performance of in-domain SVC but also in cross-domain SVC tasks.
