--- a/Models/-SVC/2024.06.08_LDM-SVC.md
+++ b/Models/-SVC/2024.06.08_LDM-SVC.md
@@ -320,3 +320,18 @@ We see that the SMOS scores for all `to male' conversions are significantly lowe
 Overall, the issue of timbre leakage in cross-gender conversion is more severe than in same-gender conversions.
 
 For example, in the case of M2M the similarity of the model using the singer guidance method is lower than that only using the LDM method, which means that singer guidance in M2M conversions is less effective than others. %读起来好费劲、像绕口令一样，上面说effective，这里又是not effective
+
+## 4·Conclusion
+
+In this paper, we proposed the LDM-SVC system, which utilizes an LDM for any-to-any singing voice conversion.  We pre-trained a So-VITS-SVC model, whose posterior encoder and decoder were used to construct a VAE to handle the latent representation.
+
+It was shown that the proposed LDM-SVC method outperforms existing approaches in terms of timbre similarity in  both seen and unseen singer conversion cases.
+
+The designed singer guidance method is beneficial for improving the conversion similarity under zero-shot conditions for unseen singer conversions.
+
+In the future, we will consider cross-domain SVC tasks, e.g., converting input speech into singing voice, as a necessity for low-resource scenarios without singing voice data.
+
+\bibliographystyle{IEEEtran}
+\bibliography{mybib}
+
+\end{document}
