--- a/Models/-SVC/2024.06.08_LDM-SVC.md
+++ b/Models/-SVC/2024.06.08_LDM-SVC.md
@@ -335,3 +335,40 @@ In the future, we will consider cross-domain SVC tasks, e.g., converting input s
 \bibliography{mybib}
 
 \end{document}
+
+## References
+
+[^Gu2021ByteSing]: {ByteSing}: A {Chinese} Singing Voice Synthesis System Using Duration Allocated Encoder-Decoder Acoustic Models and Wavernn Vocoders. 2021 12th International Symposium on Chinese Spoken Language Processing (ISCSLP) 2021.
+[^Cui2024Sifisinger]: Sifisinger: A High-Fidelity End-to-End Singing Voice Synthesizer Based on Source-Filter Model. ICASSP 2024-2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2024.
+[^Sun2016Phonetic]: Phonetic Posteriorgrams for Many-to-One Voice Conversion Without Parallel Data Training. 2016 IEEE International Conference on Multimedia and Expo (ICME) 2016.
+[^Polyak2020Unsupervised]: Unsupervised Cross-Domain Singing Voice Conversion. arXiv:2008.02830.
+[^Liu2021Fastsvc]: Fastsvc: Fast Cross-Domain Singing Voice Conversion With Feature-Wise Linear Modulation. 2021 Ieee International Conference on Multimedia and Expo (Icme) 2021.
+[^Liu2021Diffsvc]: Diffsvc: A Diffusion Probabilistic Model for Singing Voice Conversion. 2021 IEEE Automatic Speech Recognition and Understanding Workshop (ASRU) 2021.
+[^Li2021PPG-Based]: PPG-Based Singing Voice Conversion With Adversarial Representation Learning. ICASSP 2021-2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Jayashankar2023Self-Supervised]: Self-Supervised Representations for Singing Voice Conversion. ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2023.
+[^Zhou2023VITS}-based]: {VITS}-based Singing Voice Conversion System With DSPGAN Post-Processing for SVCC2023. 2023 IEEE Automatic Speech Recognition and Understanding Workshop (ASRU) 2023.
+[^Nachmani2019Unsupervised]: Unsupervised Singing Voice Conversion. arXiv:1904.06590.
+[^Deng2020Pitchnet]: Pitchnet: Unsupervised Singing Voice Conversion With Pitch Adversarial Network. ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2020.
+[^Zhang2020Durian-Sc]: Durian-Sc: Duration Informed Attention Network Based Singing Voice Conversion System. arXiv:2008.03009.
+[^Takahashi2021Hierarchical]: Hierarchical Disentangled Representation Learning for Singing Voice Conversion. 2021 International Joint Conference on Neural Networks (IJCNN) 2021.
+[^Zhou2022HiFi-SVC]: {HiFi-SVC}: Fast High Fidelity Cross-Domain Singing Voice Conversion. ICASSP 2022-2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
+[^Luo2020Singing]: Singing Voice Conversion With Disentangled Representations of Singer and Vocal Technique Using Variational Autoencoders. ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2020.
+[^Rombach2022High-Resolution]: High-Resolution Image Synthesis With Latent Diffusion Models. Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition 2022.
+[^Ghosal2023Text-to-Audio]: Text-to-Audio Generation Using Instruction-Tuned LLM and Latent Diffusion Model. arXiv:2304.13731.
+[^Liu2023Audioldm]: Audioldm: Text-to-Audio Generation With Latent Diffusion Models. arXiv:2301.12503.
+[^Liu2023AudioLDM]: AudioLDM 2: Learning Holistic Audio Generation With Self-Supervised Pretraining. arXiv:2308.05734.
+[^Liu2022Diffsinger]: Diffsinger: Singing Voice Synthesis via Shallow Diffusion Mechanism. Proceedings of the AAAI Conference on Artificial Intelligence 2022.
+[^Popov2021Diffusion-Based]: Diffusion-Based Voice Conversion With Fast Maximum Likelihood Sampling Scheme. arXiv:2109.13821.
+[^Ho2022Classifier-Free]: Classifier-Free Diffusion Guidance. arXiv:2207.12598.
+[^Kim2021Conditional]: Conditional Variational Autoencoder With Adversarial Learning for End-to-End Text-to-Speech. International Conference on Machine Learning 2021.
+[^Oord2016Wavenet]: Wavenet: A Generative Model for Raw Audio. arXiv:1609.03499.
+[^Vaswani2017Attention]: Attention Is All You Need. Advances in Neural Information Processing Systems 2017.
+[^Choi2022Snac]: SNAC: Speaker-Normalized Affine Coupling Layer in Flow-Based Architecture for Zero-Shot Multi-Speaker Text-to-Speech. IEEE Signal Processing Letters 2022.
+[^Lee2022Bigvgan]: Bigvgan: A Universal Neural Vocoder With Large-Scale Training. arXiv:2206.04658.
+[^Wang2019Neural]: Neural Source-Filter Waveform Models for Statistical Parametric Speech Synthesis. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2019.
+[^Ho2020Denoising]: Denoising Diffusion Probabilistic Models. Advances in Neural Information Processing Systems 2020.
+[^Wu2021Cross-Speaker]: Cross-Speaker Emotion Transfer Based on Speaker Condition Layer Normalization and Semi-Supervised Training in Text-to-Speech. arXiv:2110.04153.
+[^Huang2021Multi-Singer]: Multi-Singer: Fast Multi-Singer Singing Voice Vocoder With a Large-Scale Corpus. Proceedings of the 29th ACM International Conference on Multimedia 2021.
+[^Radford2023Robust]: Robust Speech Recognition via Large-Scale Weak Supervision. International Conference on Machine Learning 2023.
+[^Kim2018Crepe]: Crepe: A Convolutional Representation for Pitch Estimation. 2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2018.
+[^Wang2023Cam++]: {CAM++}: A Fast and Efficient Network for Speaker Verification Using Context-Aware Masking. arXiv:2303.00332.
