--- a/Models/-SVC/2024.01.03_CoMoSVC.md
+++ b/Models/-SVC/2024.01.03_CoMoSVC.md
@@ -21,3 +21,12 @@
   - [Publication] #TODO
 
 </details>
+
+## Abstract
+
+The diffusion-based Singing Voice Conversion (SVC) methods have achieved remarkable performances, producing natural audios with high similarity to the target timbre.
+However, the iterative sampling process results in slow inference speed, and acceleration thus becomes crucial.
+In this paper, we propose CoMoSVC, a consistency model-based SVC method, which aims to achieve both high-quality generation and high-speed sampling.
+A diffusion-based teacher model is first specially designed for SVC, and a student model is further distilled under self-consistency properties to achieve one-step sampling.
+Experiments on a single NVIDIA GTX4090 GPU reveal that although CoMoSVC has a significantly faster inference speed than the state-of-the-art (SOTA) diffusion-based SVC system, it still achieves comparable or superior conversion performance based on both subjective and objective metrics.
+Audio samples and codes are available at \href{https://comosvc.github.io/}{https://comosvc.github.io/}.
